<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">

    <ScrollView
        android:id="@+id/scrollDetailView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_marginBottom="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/charImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@color/dark_gray"
                        android:adjustViewBounds="true"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/fade_out_gradient"/>
                </FrameLayout>

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_back_button_foreground"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/charName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="40dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:hint="@string/itemNamePlaceHolder"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/charGender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24dp"
                            android:textColor="@color/green_slime"
                            android:hint="@string/detailItemGenderPlaceholder"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" | "
                            android:textSize="30dp"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/charStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24dp"
                            android:textColor="@color/white"
                            android:hint="@string/itemStatusPlaceHolder" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/ic_baseline_info_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topLayout" />

            <TextView
                android:id="@+id/detailSpeciesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                android:text="@string/detailItemSpeciesTitle"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="serif"
                app:layout_constraintTop_toBottomOf="@+id/topLayout"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/detailSpeciesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/detailItemSpeciesTitle"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:fontFamily="serif"
                app:layout_constraintTop_toBottomOf="@+id/detailSpeciesTitle"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/detailTypeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/detailItemTypeTitle"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="serif"
                app:layout_constraintTop_toBottomOf="@+id/detailSpeciesValue"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/detailTypeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:hint="-"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:fontFamily="serif"
                app:layout_constraintTop_toBottomOf="@+id/detailTypeTitle"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/detailOriginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/detailItemOriginTitle"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="serif"
                app:layout_constraintTop_toBottomOf="@+id/detailTypeValue"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/detailOriginValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/detailItemOriginPlaceholder"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:fontFamily="serif"
                app:layout_constraintTop_toBottomOf="@+id/detailOriginTitle"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/detailLocationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/detailItemLocationTitle"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="serif"
                app:layout_constraintTop_toBottomOf="@+id/detailOriginValue"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/detailLocationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/detailItemLocationPlaceholder"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:fontFamily="serif"
                app:layout_constraintTop_toBottomOf="@+id/detailLocationTitle"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/detailEpisodesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/detailItemEpisodesTitle"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="serif"
                app:layout_constraintTop_toBottomOf="@+id/detailLocationValue"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/detailEpisodeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/detailItemNumberEpisodePlaceholder"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:fontFamily="serif"
                app:layout_constraintTop_toBottomOf="@+id/detailEpisodesTitle"
                app:layout_constraintStart_toStartOf="parent"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detailEpisodesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                tools:listitem="@layout/recycler_item_episode_list"
                app:layout_constraintTop_toBottomOf="@id/detailEpisodesTitle"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        layout="@layout/footer_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>